--- a/locatory-backend/segmentation-service/app/.env.example
+++ b/locatory-backend/segmentation-service/app/.env.example
@@ -5,5 +5,6 @@ DEV_SECRET_KEY="secretkey"
 DEV_ACCESS_TOKEN_EXPIRE_MINUTES=1440
 DEV_LOG_PATH="pathtologs"
 DEV_MONGODB_URL="dburl"
+DEV_MONGODB_DATABASE_NAME="dbname"
 DEV_MONGODB_USERNAME="dbusername"
 DEV_MONGODB_PASSWORD="dbpassword"
