--- a/locatory-app/requirements.txt
+++ b/locatory-app/requirements.txt
@@ -10,5 +10,6 @@ dash-auth==1.4.1
 pymongo==3.11.0
 dnspython==2.0.0
 Flask-Login==0.5.0
+geopandas==0.8.1
 # pykerberos==1.2.1
 # python-snappy==0.5.4
