updated requirements.txt and added document overwrite feature for RFMSegments collection

--- a/locatory-backend/segmentation-service/requirements.txt
+++ b/locatory-backend/segmentation-service/requirements.txt
@@ -9,3 +9,6 @@ python-dateutil==2.7.3
 python-jose==3.2.0
 scikit-learn==0.23.2
 uvicorn==0.12.2
+python-multipart==0.0.5
+bcrypt==3.1.7
+python-dotenv==0.15.0
