--- a/locatory-app/requirements.txt
+++ b/locatory-app/requirements.txt
@@ -12,5 +12,6 @@ dnspython==2.0.0
 Flask-Login==0.5.0
 geopandas==0.8.1
 gunicorn==20.0.4
+Werkzeug==1.0.1
 # pykerberos==1.2.1
 # python-snappy==0.5.4
